WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302953
[threaded-animations]
https://scroll-driven-animations.style/demos/scroll-shadows/css/
asserts with "Threaded Scroll-driven Animations" enabled
https://bugs.webkit.org/show_bug.cgi?id=302953
Summary
[threaded-animations] https://scroll-driven-animations.style/demos/scroll-sha...
Antoine Quint
Reported
2025-11-21 08:53:44 PST
We made a mistake in
303312@main
and removed the requirement that an effect's associated animation not be pending to qualify for acceleration and as a result we hit the `ASSERT(!animation->pending())` assertion in the `AcceleratedEffect` constructor.
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2025-11-21 08:54:55 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54325
EWS
Comment 2
2025-11-21 11:29:34 PST
Committed
303410@main
(fc9b2b2ae777): <
https://commits.webkit.org/303410@main
> Reviewed commits have been landed. Closing PR #54325 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-11-21 11:30:14 PST
<
rdar://problem/165225321
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug