Source/WebCore/animation/KeyframeEffect.cpp
@@ -1947,7 +1947,7 @@ bool KeyframeEffect::canBeAccelerated() const
 
 #if ENABLE(THREADED_ANIMATIONS)
     if (canHaveAcceleratedRepresentation())
-        return true;
+        return !animation()->pending();
 #endif
 
     if (m_isAssociatedWithProgressBasedTimeline)
